<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddScreen"
    android:orientation="vertical"
    android:gravity="center">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/activity_edit_screen_fullName"
            android:gravity="right"
            android:layout_marginRight="20dp"
            android:textStyle="bold">

        </TextView>

        <EditText
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:id="@+id/activitiy_add_screen_person_editText"
            android:layout_marginRight="20dp"
            android:hint="activity_add_screen_hint_person_editText">

        </EditText>



    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"

        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/activity_edit_screen_gender"
            android:gravity="right"
            android:layout_marginRight="20dp"
            android:textStyle="bold"
            >

        </TextView>

        <RadioGroup
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:id="@+id/activity_add_screeen_gender_radioGroup"
            android:orientation="horizontal">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/activity_add_screen_man_radioButton"
                android:text="@string/common_man"
                android:layout_marginRight="20dp">

            </RadioButton>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/activity_add_screen_woman_radioButton"
                android:text="@string/common_woman">

            </RadioButton>

        </RadioGroup>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"

        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/activity_edit_screen_workingStatus"
            android:gravity="right"
            android:layout_marginRight="20dp"
            android:textStyle="bold"
            >

        </TextView>

        <RadioGroup
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:id="@+id/activity_add_screen_workingStatus_radioGroup"
            android:orientation="horizontal">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/activity_add_screen_calisiyor_radioButton"
                android:text="@string/common_working"
                android:layout_marginRight="20dp">

            </RadioButton>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/activity_add_screen_calismiyor_radioButton"
                android:text="@string/common_notWorking">

            </RadioButton>

        </RadioGroup>



    </LinearLayout>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="activity_add_screen_button_save"
        android:id="@+id/activity_add_screen_addButton">

    </Button>

</LinearLayout>